[tool.poetry]
name = "lolrmm"
version = "0.1.0"
description = ""
authors = ["Magic Sword <info@magicsword.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
